# meet-backend

./: .gitignore  Cargo.toml  readme.md
.sqlx/: query-388243ac2bd032117a1218f9bcb562ce61e3b1f128e5843b3f8c8781c344fe99.json  query-5de9610e9a70f468bdf1063609946f799283d3e5dce4c85dc17b141f3f5caa42.json  query-84da03ce37e06f706e2731bfd2762f0cb08b42d243d1f58eb7dbbb491dc105a2.json  query-b0c1e93e99567ceac49c616e4178f20925a37c68c83bee72c23a0899fb4b5586.json
migrations/: 20250218063823_meeting-table.sql
ocs-meet/: Cargo.toml
ocs-meet-cli/: Cargo.toml
ocs-meet/src/: app.rs  lib.rs  main.rs
ocs-meet/src/adapters/input/http/extractors/: studio.rs
ocs-meet/src/adapters/output/: livekit.rs  mod.rs  shuttle.rs
ocs-meet/src/adapters/output/repository/: db.rs
ocs-meet/src/domain/: meeting.rs  mod.rs  studio.rs
ocs-meet/src/ports/output/: config.rs  meeting_repository.rs  mod.rs  room_manager.rs
ocs-meet/src/services/: create_meeting.rs  list_meeting.rs
src/: app.rs  config.rs  main.rs
src/adapters/input/http/: mod.rs  tags.rs
src/adapters/input/http/extractors/: meeting.rs  mod.rs  studio.rs
src/adapters/input/http/handlers/: hello.rs  meeting.rs  mod.rs
src/adapters/input/http/models/: error.rs  meeting.rs  mod.rs
src/adapters/output/: meeting_repository.rs  mod.rs  repository.rs
src/adapters/output/repository/: meeting_repository.rs  mod.rs  repository.rs
src/domain/: meeting.rs  room.rs  studio.rs
src/ports/output/: meeting_repository.rs  mod.rs  room_manager.rs
src/services/: create_meeting.rs  join_meeting.rs  list_meeting.rs  mod.rs
(+3 files in other folders)
