[package]
name = "meet-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
poem = "3.0.0"
poem-openapi = {version = "5.1.5", features=["swagger-ui"]}
shuttle-poem = "0.52.0"
shuttle-runtime = "0.52.0"
tokio = "1.26.0"
uuid = "1.13.1"
validator = {version = "0.20.0", features=["derive"]}
